[package]
name = "charan_os"
version = "0.1.0"
edition = "2021"
authors = ["supersic <r.saranvinaiyak@gmail.com>"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
lazy_static = {version = "1.0", features = ["spin_no_std"]}
spin = "0.5.2"